app/assets/styles/styles.css
$purple: #660099;
$green: #00cc00;
$navy: #252c37;
$offWhite: #ECF0F0;
$darkGrey: #425263;
$paleRed: #DA5754;

@font-face {
	font-family: 'Proxima Nova Black';
	src: url('/assets/fonts/PROXIMANOVA-BLACK.WOFF') format('woff'), url('../PROXIMANOVA-BLACK.woff') format('woff');
}
@font-face {
	font-family: 'Zwizz Bold';
	src: url('/assets/fonts/Zwizz-Bold.WOFF') format('woff'), url('../Zwizz-Bold.woff') format('woff');
}
@font-face {
	font-family: 'Zwizz Regular';
	src: url('/assets/fonts/Zwizz-Regular.WOFF') format('woff'), url('../Zwizz-Regular.woff') format('woff');
}
* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}
body {
	min-height: 100vh;
	font-family: 'open sans';
	background: $navy; /* fallback for old browsers */

	/*background: -webkit-linear-gradient(to top, #00c6ff , #0072ff); /* Chrome 10-25, Safari 5.1-6 */

	/*background: linear-gradient(to top, #00c6ff , #0072ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}
.wrapper {
	width: 1250px;
	min-height: 1200px;
	position: relative;
	left: calc(50vw - 600px);
	z-index: 5;
}
.answer-form {
	margin: auto;
	margin-bottom: 50px;
	width: 80%;
}
.question {
	font-weight: bold;
	position: relative;
	top: 20%;
}
.answer-form--height, .answer-form--width {
	border-top: 0;
	border-left: 0;
	border-right: 0;
	border-bottom: solid 2px grey;
	height: 2em;
	text-align: center;
	width: 30%;
	margin: 0 5%;
	font-size: 1rem;
}
.cross {
	font-size: 1rem;
	line-height: 1.5rem;
	font-weight: bold;
}
.submit {
	font-weight: bold;
	cursor: pointer;
	color: $offWhite;
	text-transform: uppercase;
	padding: 0.75em 1em;
	text-align: center;
	border: none;
	border-radius: 2px;
	margin: 10px;
	width: 80px;
	font-family: 'open sans';
	background: #fe8c00; /* fallback for old browsers */
	background: -webkit-linear-gradient(to left, #fe8c00, #f83600); /* Chrome 10-25, Safari 5.1-6 */
	background: linear-gradient(to left, #fe8c00, #f83600); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}
.banner {
	background: $darkGrey;
	padding: 0.5em;
	text-transform: uppercase;
	font-family: 'zwizz bold';
	text-align: center;
	position: absolute;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	cursor: pointer;
	transition: all 0.2s;
	color: $navy;
	&:hover {
	box-shadow: 0px  0px 10px 2px rgba(0, 0, 0, 0.2);
	background: $paleRed;
	}
}
#leaderboard {
	width: 728px;
	height: 90px;
	right: 20px;
}
#skyscraper {
	height: 600px;
	width: 120px;
	top: 530px;
	left: 320px;
}
#wide-skyscraper {
	width: 160px;
	height: 600px;
	top: 530px;
	left: 460px;
}
#three-one-rectangle {
	width: 300px;
	height: 100px;
}
#full-banner {
	width: 468px;
	height: 60px;
	top: 120px;
}
#pop-under {
	width: 720px;
	height: 300px;
	top: 200px;
}
#medium-rectangle {
	width: 300px;
	height: 250px;
	right: 20px;
	top: 120px;
}
#vertical-banner {
	width: 120px;
	height: 240px;
	right: 340px;
	top: 120px;
}
#button1 {
	width: 120px;
	height: 90px;
	right: 340px;
	top: 400px;
}
#button2 {
	width: 120px;
	height: 60px;
	right: 340px;
	top: 501px;
}
#half {
	width: 234px;
	height: 60px;
	top: 120px;
	left: 486px;
}
#half-page {
	width: 300px;
	height: 600px;
	top: 530px;
	left: 0px;
}
#vertical-rectangle {
	width: 240px;
	height: 400px;
	right: 20px;
	top: 400px;
}
#square-pop-up {
	width: 250px;
	height: 250px;
	left: 640px;
	top: 580px;
}
#micro-bar {
	width: 88px;
	height: 31px;
	left: 640px;
	top: 530px;
}
#large-rectangle {
	width: 336px;
	height: 280px;
	left: 640px;
	top: 850px;
}
#rectangle {
	width: 180px;
	height: 150px;
	right: 20px;
	top: 830px;
}
#square-button {
	width: 125px;
	height: 125px;
	right: 20px;
	top: 1005px;
}
.dimensions-label {
	display: block;
	margin-top: 0.5em;
	font-family: 'zwizz regular';
	text-transform: none;
}
.title {
	font-family: 'zwizz regular', helvetica;
	color: $offWhite;
	padding: 0.25em;
	font-weight: 300;
	height: 20%;
	font-size: 8.5vw;
	text-align: center;
}
.title--span {
	font-weight: 800;
	font-family: 'zwizz bold';
}

.clicked-banner {
	position: fixed;
	display: block;
	z-index: 9999;
	top: 0 !important;
	left: 0 !important;
	right: 0 !important;
	bottom: 0 !important;
	margin: auto;
	font-size: 1.25rem !important;
	transition: all 0.2s;
	padding: 0.5em;
	background: $paleRed;
	text-transform: uppercase;
	font-family: 'zwizz bold';
	text-align: center;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	cursor: pointer;
	transition: all 0.2s;

	color: $navy;
}

.clicked-banner::after {
	display: block;
	content: '';
	position: fixed;
	top: 0;
	left: 0;
	right:0;
	bottom: 0;
	filter: blur();
}

.blur {
	filter: blur(10px) brightness(0.4);
	display: flex;
}

.flex {
	display: flex;
	justify-content: center;
}

.blurred-background {
	height: 100vh;
	position: relative;
	
	
}


.popup-wrap {
	position: absolute;
	top: 25vh;
	height: 75vh;
	width: 100%;
	z-index: 10;
	filter: blur();
}

